Fix TableWidget row delete button styles
- Removed styles which caused delete row buttons to be misaligned
  with the associated inputs.

Bug: T116854

--- a/modules/ve-graph/widgets/ve.ui.RowWidget.css
+++ b/modules/ve-graph/widgets/ve.ui.RowWidget.css
@@ -18,7 +18,6 @@
 
 .ve-ui-rowWidget > .ve-ui-rowWidget-cells {
 	float: left;
-	margin-right: -1px;
 }
 
 .ve-ui-rowWidget > .ve-ui-rowWidget-cells > .oo-ui-inputWidget {
@@ -29,7 +28,6 @@
 
 .ve-ui-rowWidget > .ve-ui-rowWidget-delete-button > .oo-ui-buttonElement-button {
 	margin: 0;
-	padding-bottom: 2px;
 }
 
 .ve-ui-rowWidget.ve-ui-rowWidget-insertionRow {
